--- a/style.css
+++ b/style.css
@@ -65,6 +65,9 @@ h1,h2,h3,h4,h5,h6{
     padding-right: 30%;
 }
 .img--redes{
+    display: flex;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
     border-radius: 0.3rem;
     overflow-y: hidden;
     background-size:cover;
