--- a/style.css
+++ b/style.css
@@ -65,11 +65,10 @@ h1,h2,h3,h4,h5,h6{
     padding-right: 30%;
 }
 .img--redes{
-    display: flex;
     margin-inline-start: auto;
     margin-inline-end: auto;
     border-radius: 0.3rem;
-    overflow-y: hidden;
+    overflow-y: auto;
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center center;
